--- a/style.css
+++ b/style.css
@@ -72,6 +72,17 @@ nav * {
   text-align: center;
   text-decoration: none;
 }
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+/* This is whats needed */
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
  .wrapper {
     display: grid;
