--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ footer {
   padding-right: 10rem;
   padding-left: 4rem;
   grid-area: footer;
-  background-color: #f5f5f5;
+  background-color: #FFFFFF;
   text-align: center;
   font-size: 1rem;
 	font-weight: 400;
@@ -37,7 +37,7 @@ header {
   padding: 1.3rem;
   grid-area: header;
   text-align: center;
-  background: #f5f5f5;
+  background: #FFFFFF;
   color: #2e00c4;
   word-spacing: 10rem;
   font-family: Arial;
