--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav {
   position: fixed;
   top: 0;
   text-align: center;
-  background: #f5f5f5;
+  background: #FFFFFF;
   color: black;
   max-height: 100vh;
 }
