--- a/style.css
+++ b/style.css
@@ -96,7 +96,15 @@ nav * {
 
 .section1 {
 	justify-content: right;
+	text-align: right;
 }
+
+#grid {
+  display: grid;
+  grid-template-columns: repeat(1fr, 3fr, 1fr);
+
+}
+
 	
 /* Based on Bootstrap, extra-small to small */
 @media (min-width: 576px) {
