--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
   padding-left: 20rem;
   grid-area: footer;
   grid-template-columns: 1fr 4fr 1fr;
-  background-color: #FFFFFF;
+  background-color:  #ebeced;
   text-align: center;
   font-size: 1rem;
 	font-weight: 400;
@@ -38,7 +38,7 @@ header {
   padding: 1.3rem;
   grid-area: header;
   text-align: center;
-  background: #FFFFFF;
+  background:  #ebeced;
   color: black;
   word-spacing: 10rem;
   font-family: Arial;
