--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
   padding-left: 20rem;
   grid-area: footer;
   grid-template-columns: 1fr 4fr 1fr;
-  background-color:  #ebeced;
+  background-color:  white;
   text-align: center;
   font-size: 1rem;
 	font-weight: 400;
